--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Elecciones</h1>
 </div>
+   @foreach (Partido item in ViewBag.Partidos)
+   {
+        <p>@item.Nombre</p>
+        <a href="@item.SitioWeb">Pagina de @item.Nombre</a>
+        <img src="/Imagenes/@item.Logo" alt="imagen-@item.Nombre">
+        <p>@item.FechaFundacion</p>
+        <p>@item.CantidadDiputados</p>
+        <p>@item.CantidadSenadores</p>
+   }
+
