--- a/Views/Home/VerDetallePartido.cshtml
+++ b/Views/Home/VerDetallePartido.cshtml
@@ -8,8 +8,8 @@
     <img src="/Imagenes/@ViewBag.DatosPartido.Logo" alt="">
     <p><a href="@ViewBag.DatosPartido.SitioWeb">Pagina JXC</a></p>
     <h2>@ViewBag.DatosPartido.FechaFundacion</h2>
-    <h2>@ViewBag.DatosPartido.CantidadDiputados</h2>
-    <h2>@ViewBag.DatosPartido.CantidadSenadores</h2>
+    <h2>Cantidad de diputados: @ViewBag.DatosPartido.CantidadDiputados</h2>
+    <h2>Cantodad de senadores: @ViewBag.DatosPartido.CantidadSenadores</h2>
     <h1 class="display-4"> Candidatos</h1>
     @foreach (Candidato item in ViewBag.ListaCandidatos)
     {
@@ -18,12 +18,8 @@
     <p>@item.FechaNacimiento</p>
     <p>@item.Foto</p>
     <p>@item.Postulacion</p>
-<form action='@Url.Action("EliminarCandidato", new { idPartido = item.IdPartido, idCandidato = item.IdCandidato })' >
-  <button type="submit">Eliminar Candidato</button>
-</form>
+    <a href='@Url.Action("EliminarCandidato", new { idPartido = item.IdPartido, idCandidato = item.IdCandidato })' ><input type="button" value="Eliminar Candidato"></input></a>
     }
+    <a href='@Url.Action("AgregarCandidato", new { idPartido = @ViewBag.DatosPartido.IdPartido })'><input type="button" value="Agregar Candidato"></input></a>
 </div>
 
-<form action='@Url.Action("AgregarCandidato", new { idPartido = @ViewBag.DatosPartido.IdPartido })' >
-  <button type="submit">Agregar Candidato</button>
-</form>
