--- a/Views/Home/AgregarCandidato.cshtml
+++ b/Views/Home/AgregarCandidato.cshtml
@@ -1,1 +1,22 @@
 /*Aca va el formulario[Esta en el HomeController como AgregarCandidato(int idCandidato)], ya lo estoy estoy llamando en los controllers*/
+<h1>Agregar nuevo candidato</h1>
+<form method="post" action='@Url.Action("GuardarCandidato")'>
+  <input type="hidden" id="IdPartido" name="IdPartido" value=" @ViewBag.IdPartido"><br>
+
+  <label for="Apellido">Apellido:</label>
+  <input type="text" id="Apellido" name="Apellido"><br>
+
+  <label for="nombre">Nombre:</label>
+  <input type="text" id="Nombre" name="Nombre"><br>
+
+  <label for="FechaNacimiento">Fecha de Nacimiento:</label>
+  <input type="date" id="FechaNacimiento" name="FechaNacimiento"><br>
+
+  <label for="Foto">Foto:</label>
+  <input type="text" id="Foto" name="Foto"><br>
+
+  <label for="Postulacion">Postulación:</label>
+  <input type="text" id="Postulacion" name="Postulacion"><br>
+
+  <input type="submit" value="Enviar">
+</form>
