--- a/Views/Home/VerDetallePartido.cshtml
+++ b/Views/Home/VerDetallePartido.cshtml
@@ -13,13 +13,13 @@
     <h1 class="display-4"> Candidatos</h1>
     @foreach (Candidato item in ViewBag.ListaCandidatos)
     {
+    <p>@item.Foto</p>
     <p>@item.Apellido</p>
     <p>@item.Nombre</p>    
-    <p>@item.FechaNacimiento</p>
-    <p>@item.Foto</p>
-    <p>@item.Postulacion</p>
     <a href='@Url.Action("EliminarCandidato", new { idPartido = item.IdPartido, idCandidato = item.IdCandidato })' ><input type="button" value="Eliminar Candidato"></input></a><br>
+    <a href='@Url.Action("VerDetalleCandidato", new { idCandidato = item.IdCandidato})'><input type="button" value="Saber mas del candidato"></input></a>
     }
+    
     <a href='@Url.Action("AgregarCandidato", new { idPartido = @ViewBag.DatosPartido.IdPartido })'><input type="button" value="Agregar Candidato"></input></a>
 </div>
 
