Terminamos los css

--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -2,9 +2,7 @@
 @{
     ViewData["Title"] = "Creditos";
 }
-<div class="text-center">
-<h1>@ViewData["Title"]</h1>
-</div>
+<div class="colaboradores">
 <div class="colaborador">
     <h1>Dante Siegel</h1>
     <img class="imgCol" src="/Imagenes/FotoUsuario.png" alt="">
@@ -18,5 +16,6 @@
 <div class="colaborador">
     <h1>Raian Kim</h1>
     <img class="imgCol" src="/Imagenes/FotoUsuario.png" alt="">
-    <p>Contribuidor en el Model y View</p> 
+    <p>Contribuidor en el Model,View,Controller y css</p> 
+</div>
 </div>
