--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,18 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Elecciones</h1>
-</div>
+
    
    <div class="Patidos-A">
    @foreach (Partido item in ViewBag.Partidos)
    {
     <div class="Partidos-B">
         <p>@item.Nombre</p>
-        <p><a href="@item.SitioWeb">Pagina de @item.Nombre</a></p>
         <img id = "img1" src="/Imagenes/@item.Logo" alt="imagen-@item.Nombre"><br>
-        <a href='@Url.Action("VerDetallePartido", new {idPartido = item.IdPartido})'>Click aca para saber mas sobre el partido</a>
+        <button><a href='@Url.Action("VerDetallePartido", new {idPartido = item.IdPartido})'>Click aca para saber mas sobre el partido</a></button>
     </div>
    }
    </div>
