--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -47,11 +47,15 @@ button.accept-policy {
   font-size: 1rem;
   line-height: inherit;
 }
-
+header
+{
+  background-color: #2d81d4;
+}
 .footer {
-  position: absolute;
+  position:fixed;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+  background-color: #2d81d4;
 }
