--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,30 +19,80 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-image: url(/Imagenes/Casa_Rosada_Buenos_Aires.jpeg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 .Partidos-B img
 {
-  max-width: 300px;
+  max-width: 500px;
 }
 .Partidos-B
 {
   border: 3px solid rgb(126, 187, 223);
   border-radius: 10px;
-  padding: 50px;
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: center;
+  align-items:center;
+  justify-content:end;
+  font-size: x-large;
+  color: white;
+  backdrop-filter: blur(10px);
+  margin: 50px;
+}
+.Partidos-B button
+{
+  border-radius: 8px;
+  background-color: #2d81d4;
+  border-style: none;
+  
+  transition-duration: 0.3s;
+}
+.Partidos-B button:hover
+{
+  background-color: white;
 }
 .Partidos-B a
 {
   text-decoration: none;
-  color: black;
+  color: white;
+}
+.Partidos-B a:hover
+{
+  color: #2d81d4;
 }
 .Patidos-A
 {
   display: flex;
   justify-content: space-around;
+
+}
+.infoGeneral
+{
+  display: flex;
+  border: 5px solid #2d81d4;
+  border-radius: 7px;
+  backdrop-filter: blur(10px);
+  flex-direction: column;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+.infoGeneral a
+{
+  color: white;
+  text-decoration: none;
+  font-size: x-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.infoGeneral p
+{
+  font-size: x-large;
+}
+.infoGeneral img
+{
+  width: 50%;
 }
 .Candidatomod
 {
@@ -51,9 +101,45 @@ body {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  align-content: LEFT;
   justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
   width:20%;
+}
+.CandidatoCuadro input
+{
+  border-radius: 30px;
+  height: 50px;
+  transition-duration: 0.3s;
+  border-style: none;
+}
+.elim:hover
+{
+  background-color: rgb(236, 74, 74);
+  color: white;
+}
+.Sabermas:hover
+{
+  background-color: rgb(126, 187, 223);
+  color: white;
+}
+.Agreg:hover
+{
+  background-color:rgb(145, 223, 2) ;
+  color: white;
+}
+.botonUltimo
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.botonUltimo input
+{
+  border-radius: 30px;
+  height: 50px;
+  transition-duration: 0.3s;
+  border-style: none;
 }
 .Candidatomod img{
   width: 100%;
@@ -63,5 +149,65 @@ body {
 }
 .CandidatoCuadro
 {
-  
+
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  justify-content: space-around;
+  margin: 25px;
+  margin-left: 25px;
+}
+.formulario
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  border: 3px solid lightblue;
+  backdrop-filter: blur(10px);
+  font-size: x-large;
+}
+.formulario input
+{
+  width: 400px;
+}
+.formulario input[type=submit]
+{
+  border-radius: 0 0 10px 10px;
+  border-style: none;
+  transition-duration: 0.3s;
+}
+.formulario input[type=submit]:hover
+{
+  background-color:rgb(145, 223, 2) ;
+  color: white;
+}
+.quevotar
+{
+  backdrop-filter: blur(10px);
+  margin-top: 80px;
+  border: 3px solid lightblue;
+  border-radius: 7px;
+}
+.colaboradores
+{
+  display: flex;
+  justify-content: space-around;
+}
+.colaborador
+{
+  padding:10px ;
+  text-align: center;
+  border-radius: 10px;
+  border: 2px solid rgb(184, 184, 0);
+  width: 350px;
+  background-color: #fffec4;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.colaborador img
+{
+  width: 350px;
 }
