--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Creditos";
 }
+<div class="colaboradoresBody">
+
+</div>
 <div class="colaboradores">
 <div class="colaborador">
     <h1>Dante Siegel</h1>
