--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-   
+   <div class="indexBody">
    <div class="Patidos-A">
    @foreach (Partido item in ViewBag.Partidos)
    {
@@ -14,6 +14,6 @@
     </div>
    }
    </div>
-   
+</div>   
    
 
